--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ skip_render:  # 跳过指定文件的渲染，可以使用glob表达式来匹配
 
 # Writing
 new_post_name: :year/:title.md # 新生成文章名
-default_layout: post  # 帖子/草稿/页面：post/draft/page，设置后，hexo n 默认生成对应属性文章
+default_layout: draft  # 帖子/草稿/页面：post/draft/page，设置后，hexo n 默认生成对应属性文章
 titlecase: false # 生成文章名首字母为大写
 external_link:  # 外部链接
   enable: true # 在新选项卡中打开外部链接
@@ -42,7 +42,7 @@ external_link:  # 外部链接
   exclude: '' # 排除选定域名
 filename_case: 0 # 不转/转为大写/转为小写：0/1/2
 render_drafts: true  # 显示草稿
-post_asset_folder: false  # 同步创建与文章同名的资源文件夹
+post_asset_folder: true  # 同步创建与文章同名的资源文件夹
 relative_link: false  # 把链接改为与根目录的相对地址
 future: true  # 显示当前时间之后的文章
 highlight:  # 代码高亮
@@ -61,8 +61,8 @@ prismjs:
 # Home page setting
 index_generator:  # 主页设置
   path: ''  # 博客根目录
-  per_page: 0  # 每页显示的帖子，0➪禁用分页
-  order_by: name # 随机/名称/使用频率/修改时间：random/name/length/date
+  per_page: 10  # 每页显示的帖子，0➪禁用分页
+  order_by: -date # 随机/名称/使用频率/修改时间：random/name/length/date
 
 # Category & Tag
 default_category: uncategorized # 默认分类：未分类
